--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.9",
-    "typescript": "^5.0.3"
+    "styled-components": "^5.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "typescript": "^5.0.3"
   }
 }
