--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
-    "typescript": "^5.0.3"
+    "@types/react-dom": "^18.2.1",
+    "@types/styled-components": "^5.1.26",
+    "typescript": "^5.0.4"
   }
 }
