--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "html-webpack-plugin": "^5.5.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "webpack-dev-server"
   },
   "eslintConfig": {
     "extends": [
@@ -34,9 +31,13 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.2.1",
     "@types/styled-components": "^5.1.26",
-    "typescript": "^5.0.4"
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.15.0"
   }
 }
