--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "html-webpack-plugin": "^5.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "styled-components": "^5.3.9",
-    "html-webpack-plugin": "^5.5.1"
+    "styled-components": "^5.3.9"
   },
   "scripts": {
     "dev": "webpack-dev-server"
@@ -31,9 +31,10 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/styled-components": "^5.1.26",
+    "file-loader": "^6.2.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.75.0",
